--- a/im.ui
+++ b/im.ui
@@ -7,13 +7,44 @@
     <x>0</x>
     <y>0</y>
     <width>573</width>
-    <height>248</height>
+    <height>236</height>
    </rect>
   </property>
+
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <widget class="QRadioButton" name="chk_1">
+
+  <widget class="QCheckBox" name="chk_1">
+   <property name="geometry">
+    <rect>
+     <x>30</x>
+     <y>20</y>
+     <width>92</width>
+     <height>23</height>
+    </rect>
+   </property>
+
+   <property name="text">
+    <string>palletizing</string>
+   </property>
+  </widget>
+
+  <widget class="QCheckBox" name="chk_2">
+   <property name="geometry">
+    <rect>
+     <x>30</x>
+     <y>90</y>
+     <width>151</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>depalletizing</string>
+   </property>
+  </widget>
+
+  <widget class="QRadioButton" name="QR">
    <property name="geometry">
     <rect>
      <x>50</x>
@@ -26,7 +57,8 @@
     <string>QR</string>
    </property>
   </widget>
-  <widget class="QRadioButton" name="chk_2">
+
+  <widget class="QRadioButton" name="Alphabet">
    <property name="geometry">
     <rect>
      <x>100</x>
@@ -39,10 +71,11 @@
     <string>Alphabet</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="Depallet_Start_btn">
+
+  <widget class="QPushButton" name="Start">
    <property name="geometry">
     <rect>
-     <x>30</x>
+     <x>50</x>
      <y>180</y>
      <width>89</width>
      <height>25</height>
@@ -52,11 +85,12 @@
     <string>Start</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="Pallet_End_btn">
+
+  <widget class="QPushButton" name="End">
    <property name="geometry">
     <rect>
-     <x>160</x>
-     <y>90</y>
+     <x>190</x>
+     <y>180</y>
      <width>89</width>
      <height>25</height>
     </rect>
@@ -66,70 +100,17 @@
    </property>
   </widget>
 
-  <widget class="QPushButton" name="Pallet_Start_btn">
-   <property name="geometry">
-    <rect>
-     <x>30</x>
-     <y>90</y>
-     <width>89</width>
-     <height>25</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Start</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="Depallet_End_btn">
-   <property name="geometry">
-    <rect>
-     <x>160</x>
-     <y>180</y>
-     <width>89</width>
-     <height>25</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>End</string>
-   </property>
-  </widget>
   <widget class="QGraphicsView" name="graphicsView">
    <property name="geometry">
     <rect>
-     <x>260</x>
-     <y>30</y>
+     <x>310</x>
+     <y>20</y>
      <width>256</width>
      <height>192</height>
     </rect>
    </property>
   </widget>
 
-  
-  <widget class="QLabel" name="label">
-   <property name="geometry">
-    <rect>
-     <x>20</x>
-     <y>20</y>
-     <width>101</width>
-     <height>17</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Palletizing</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_2">
-   <property name="geometry">
-    <rect>
-     <x>20</x>
-     <y>150</y>
-     <width>101</width>
-     <height>17</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Depalletizing</string>
-   </property>
-  </widget>
  </widget>
  <resources/>
  <connections/>
